css: overflow x corrected

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,10 +1,8 @@
-html {
+html,
+body {
   scroll-behavior: smooth;
   margin: 0;
-}
-
-body {
-  margin: 0;
+  overflow-x: hidden;
 }
 
 
